Добавила стили для страницы формы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,12 @@
 @import "./index/page-footer.scss";
 @import "./index/social.scss";
 @import "./index/copyright.scss";
+@import "./form/form-page.scss";
+@import "./form/form.scss";
+@import "./form/user-data.scss";
+@import "./form/achievs.scss";
+@import "./form/user-contacts.scss";
+@import "./form/choose-os.scss";
+@import "./form/desc-emotions.scss";
+@import "./form/form-popup.scss";
+@import "./form/body-form.scss";
