Добавила стили для страницы галереи

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,3 +25,10 @@
 @import "./form/desc-emotions.scss";
 @import "./form/form-popup.scss";
 @import "./form/body-form.scss";
+@import "./gallery/page-gallery.scss";
+@import "./gallery/photo-list.scss";
+@import "./gallery/card.scss";
+@import "./gallery/comment.scss";
+@import "./gallery/call-to-action.scss";
+@import "./gallery/post.scss";
+@import "./gallery/edit.scss";
