--- a/source/sass/form/form-popup.scss
+++ b/source/sass/form/form-popup.scss
@@ -5,7 +5,7 @@
 
   background-color: #ffffff;
 
-  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
+  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
   border-radius: 3px;
 }
 
